Fix HTML encoding issues in log.html

--- a/log.html
+++ b/log.html
@@ -50,7 +50,7 @@
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="bottom"
-        data-theme="gruvbox_light"
+        data-theme="noborder_light"
         data-lang="en"
         crossorigin="anonymous"
         async>
@@ -73,4 +73,5 @@
 </div>
 
 </body>
+
 </html>
