--- a/log.html
+++ b/log.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="log-intro">
-        "Leave your mark. Verify your presence. All statements become part of the permanent record."
+        "Leave a comment. Reach out! (●'◡'●)"
     </div>
 
     <div class="signature-lines">
@@ -73,5 +73,4 @@
 </div>
 
 </body>
-
 </html>
