--- a/index.html
+++ b/index.html
@@ -100,9 +100,6 @@
         </script>
     </div>
         
-        <div class="wire-footer">
-            <a href="log.html">VIEW FULL LOG ↗</a>
-        </div>
     </div>
 
     <footer id="contact-footer" class="footer-section">
@@ -130,4 +127,4 @@
     document.getElementById('date-display').textContent = new Date().toLocaleDateString('en-US', options).toUpperCase();
 </script>
 </body>
-</html>f
+</html>
