--- a/index.html
+++ b/index.html
@@ -76,30 +76,29 @@
     </div>
 
     <div class="wire-feed-section">
-    <div class="wire-header">
-        <span class="blinking-dot">●</span> LATEST COMMENTS
-    </div>
-    
-    <div class="wire-window">
-        <script src="https://giscus.app/client.js"
-            data-repo="RogerKHLO/RogerKHLO.github.io"
-            data-repo-id="[YOUR_REPO_ID]"
-            data-category="[YOUR_CATEGORY_NAME]"
-            data-category-id="[YOUR_CATEGORY_ID]"
-            data-mapping="specific"
-            data-term="guestbook"
-            data-strict="0"
-            data-reactions-enabled="0" 
-            data-emit-metadata="0"
-            data-input-position="top"
-            data-theme="light"
-            data-lang="en"
-            data-sort="newest"
-            crossorigin="anonymous"
-            async>
-        </script>
-    </div>
+        <div class="wire-header">
+            <span class="blinking-dot">●</span> LATEST INTERCEPTIONS
+        </div>
         
+        <div class="wire-window">
+            <script src="https://giscus.app/client.js"
+                data-repo="RogerKHLO/RogerKHLO.github.io"
+                data-repo-id="[YOUR_REPO_ID]"
+                data-category="[YOUR_CATEGORY_NAME]"
+                data-category-id="[YOUR_CATEGORY_ID]"
+                data-mapping="specific"
+                data-term="guestbook"
+                data-strict="0"
+                data-reactions-enabled="0" 
+                data-emit-metadata="0"
+                data-input-position="top"
+                data-theme="light"
+                data-lang="en"
+                data-sort="newest"
+                crossorigin="anonymous"
+                async>
+            </script>
+        </div>
     </div>
 
     <footer id="contact-footer" class="footer-section">
