--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="wire-feed-section">
         <div class="wire-header">
-            <span class="blinking-dot">●</span> LATEST INTERCEPTIONS
+            <span class="blinking-dot">●</span> LATEST COMMENTS
         </div>
         
         <div class="wire-window">
@@ -126,4 +126,5 @@
     document.getElementById('date-display').textContent = new Date().toLocaleDateString('en-US', options).toUpperCase();
 </script>
 </body>
+
 </html>
