--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 data-mapping="specific"
                 data-term="guestbook"
                 data-strict="0"
-                data-reactions-enabled="0" 
-                data-emit-metadata="0"
+                data-reactions-enabled="1"   data-emit-metadata="0"
                 data-input-position="top"
                 data-theme="light"
                 data-lang="en"
@@ -126,5 +125,4 @@
     document.getElementById('date-display').textContent = new Date().toLocaleDateString('en-US', options).toUpperCase();
 </script>
 </body>
-
 </html>
