--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <a href="hobbies.html">Creative Works</a>
                 <a href="#contact-footer">Contact Info.</a>
                 <a href="info.html">About Me</a>
+                <a href="assets/focus.html">Focus ⏱︎</a>
             </div>
             <div style="margin-top: 40px; border: 4px double var(--ink-black); padding: 15px; text-align: center; background: rgba(0,0,0,0.03);">
                 <div style="font-family: var(--font-masthead); font-size: 1.8rem;">WANTED</div>
@@ -75,28 +76,33 @@
         </div>
     </div>
 
-    <div class="wire-feed-section">
-        <div class="wire-header">
-            <span class="blinking-dot">●</span> LATEST COMMENTS
-        </div>
+    <div class="scrap-note-widget">
         
-        <div class="wire-window">
-            <script src="https://giscus.app/client.js"
-                data-repo="RogerKHLO/RogerKHLO.github.io"
-                data-repo-id="[YOUR_REPO_ID]"
-                data-category="[YOUR_CATEGORY_NAME]"
-                data-category-id="[YOUR_CATEGORY_ID]"
-                data-mapping="specific"
-                data-term="guestbook"
-                data-strict="0"
-                data-reactions-enabled="1"   data-emit-metadata="0"
-                data-input-position="top"
-                data-theme="light"
-                data-lang="en"
-                data-sort="newest"
-                crossorigin="anonymous"
-                async>
-            </script>
+        <div class="note-tab">
+            <span class="note-label">Psst... Read this</span>
+            <span class="paper-clip">📎</span>
+        </div>
+
+        <div class="note-body">
+            <div class="lines"></div> <div class="giscus-wrapper">
+                <script src="https://giscus.app/client.js"
+                    data-repo="RogerKHLO/RogerKHLO.github.io"
+                    data-repo-id="[YOUR_REPO_ID]"
+                    data-category="[YOUR_CATEGORY_NAME]"
+                    data-category-id="[YOUR_CATEGORY_ID]"
+                    data-mapping="specific"
+                    data-term="guestbook"
+                    data-strict="0"
+                    data-reactions-enabled="1" 
+                    data-emit-metadata="0"
+                    data-input-position="top"
+                    data-theme="noborder_light"
+                    data-lang="en"
+                    data-sort="newest"
+                    crossorigin="anonymous"
+                    async>
+                </script>
+            </div>
         </div>
     </div>
 
