--- a/assets/focus.html
+++ b/assets/focus.html
@@ -15,7 +15,7 @@
         <a href="../index.html" style="text-decoration: none; color: inherit;">
             <div style="font-family: var(--font-display); font-weight: bold; margin-bottom: 10px; border-bottom: 1px dotted #333; display: inline-block;">← RETURN TO FRONT PAGE</div>
         </a>
-        <header class="masthead" style="font-size: 3rem;">The Chronometer</header>
+        <header class="masthead" style="font-size: 3rem;">The Great Focus</header>
         <div class="subhead">
             <span>Model #311225</span>
             <span>Focus Mechanism</span>
